--- a/AudioShare-client/pom.xml
+++ b/AudioShare-client/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>jndi-client</artifactId>
             <version>5.16.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.media/jmf -->
+        <dependency>
+            <groupId>javax.media</groupId>
+            <artifactId>jmf</artifactId>
+            <version>2.1.1e</version>
+        </dependency>
     </dependencies>
 
     <build>
